--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -1,13 +1,13 @@
-.App {
+.Main {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.Main-logo {
+  animation: Main-logo-spin infinite 20s linear;
   height: 40vmin;
 }
 
-.App-header {
+.Main-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -18,11 +18,11 @@
   color: white;
 }
 
-.App-link {
+.Main-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes Main-logo-spin {
   from {
     transform: rotate(0deg);
   }
